/*
 * Copyright 2017, TeamDev Ltd. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.examples.todolist;

option (type_url_prefix) = "type.spine.examples.todolist";
option java_package = "org.spine3.examples.todolist.c.enrichments";
option java_outer_classname = "EnrichmentsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";
import "spine/enrichment_annotations.proto";
import "todolist/values.proto";
import "todolist/model.proto";

// Enrichment for task and label details.
//
message DetailsEnrichment {

    option (enrichment_for) = "spine.examples.todolist.LabelledTaskRestored,"
                              "spine.examples.todolist.LabelAssignedToTask";

    // A label details.
    LabelDetails label_details = 1 [(by) = "label_id"];

    // A task details.
    TaskDetails task_details = 2 [(by) = "task_id"];
}

// Enrichment for the label list.
//
message LabelListEnrichment {

    option (enrichment_for) = "spine.examples.todolist.TaskDescriptionUpdated,"
                              "spine.examples.todolist.TaskPriorityUpdated,"
                              "spine.examples.todolist.TaskDueDateUpdated,"
                              "spine.examples.todolist.TaskCompleted,"
                              "spine.examples.todolist.TaskReopened,"
                              "spine.examples.todolist.TaskDeleted,"
                              "spine.examples.todolist.TaskDraftFinalized";

    // A label ID list.
    LabelIdList label_id_list = 1 [(by) = "task_id"];
}

// Enrichment for the task.
//
message TaskEnrichment {
    option (enrichment_for) = "spine.examples.todolist.TaskDraftFinalized";

    // A task.
    Task task = 1 [(by) = "task_id"];
}
